--- a/home/public/index.html
+++ b/home/public/index.html
@@ -19,6 +19,14 @@
   <!-- CUSTOM STYLE CSS -->
   <link href="assets/css/style.css" rel="stylesheet" />
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <style>
+    body {
+      font-family: "Helvetica Neue", Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "Wenquanyi Micro Hei", sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+    }
+  </style>
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -290,49 +298,38 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2  text-center">
-          <h2> CONTACT</h2>
+          <h2>联系我们</h2>
           <p>
-            Lorem ipsumdolor sitamet, consect adipiscing elit
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit
-
           </p>
         </div>
       </div>
       <div class="row ">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center">
           <form>
-            <label>YOUR NAME</label>
+            <label>称呼</label>
             <div class="form-group">
               <input type="text" class="form-control" required="required" />
 
             </div>
-            <label>YOUR EMAIL</label>
+            <label>电子邮件</label>
             <div class="form-group">
               <input type="text" class="form-control" required="required" />
             </div>
-            <label>YOUR MESSAGE</label>
+            <label>你的留言</label>
             <div class="form-group">
               <textarea name="message" id="message" required="required" class="form-control" style="min-height:120px;"></textarea>
             </div>
             <div class="form-group">
-              <button type="submit" class="btn custom-btn-1 btn-block">Submit Request</button>
+              <button type="submit" class="btn custom-btn-1 btn-block">确认提交</button>
             </div>
-
           </form>
         </div>
-
-
       </div>
     </div>
   </section>
   <!--CONTACT SECTION END-->
   <div class="footer">
-    &copy; 2014 yourdomian.com | More Templates
-    <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from
-    <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+    &copy; 2016-2017 fengyun.cc
   </div>
 
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
