chore: change qaId

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -161,7 +161,6 @@
           </div>
         </div>
       </div>
-      <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" title="网站模板">网站模板</a></div>
       <div class="row ">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="media">
@@ -187,7 +186,6 @@
               <p>
                 以务实、创新、不空谈，请非诚之士绕道而行
               </p>
-
             </div>
           </div>
         </div>
@@ -214,31 +212,26 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2  text-center">
-          <h2> SERVICES</h2>
+          <h2>服务</h2>
           <p>
-            Lorem ipsumdolor sitamet, consect adipiscing elit
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit.
-            Lorem ipsumdolor sitamet, consect adipiscing elit
-
+            我们尊崇极客精神和创新精神，并且始终如一地关注和满足用户的需求，
+            不妄自菲薄的宣扬自己一定能做到什么，只专注于市场需求和用户需求为导向去服务市场，
+            以一种谦卑的心态去做好我们的服务。
           </p>
         </div>
       </div>
       <div class="row ">
-
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="media">
             <div class="pull-left">
               <i class="fa fa-lock fa-4x "></i>
             </div>
             <div class="media-body">
-              <h3 class="media-heading">Easy To Customize</h3>
+              <h3 class="media-heading">安全服务</h3>
               <p>
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+              坚持保护用户的所有权益
+              坚持保护用户的所有隐私
               </p>
-
             </div>
           </div>
         </div>
@@ -248,28 +241,27 @@
               <i class="fa fa-quote-right fa-4x  "></i>
             </div>
             <div class="media-body">
-              <h3 class="media-heading">Free To Download</h3>
+              <h3 class="media-heading">服务文化</h3>
               <p>
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+              少许诺，多兑现
+              认准了，就去做；不跟风，不动摇
+              证明自己，用结果说话
               </p>
-
             </div>
           </div>
         </div>
       </div>
       <div class="row ">
-
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="media">
             <div class="pull-left">
               <i class="fa fa-road fa-4x "></i>
             </div>
             <div class="media-body">
-              <h3 class="media-heading">Easy To Customize</h3>
+              <h3 class="media-heading">梦想服务</h3>
               <p>
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                我们因梦想而伟大，所有的成功者都是大梦想家：在冬夜的火堆旁，在阴天的雨雾中，
+                梦想着未来。而光明和希望总是降临在那些真心相信梦想一定会成真的人身上。
               </p>
             </div>
           </div>
@@ -280,10 +272,12 @@
               <i class="fa fa-retweet fa-4x  "></i>
             </div>
             <div class="media-body">
-              <h3 class="media-heading">Free To Download</h3>
+              <h3 class="media-heading">服务体系</h3>
               <p>
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
-                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+              让产品简单，再简单
+              给最自由的空间
+              让产品极致的呈现
+              让梦想落地生花
               </p>
             </div>
           </div>
