chore: change qaId

--- a/home/public/index.html
+++ b/home/public/index.html
@@ -323,7 +323,7 @@
   </section>
   <!--CONTACT SECTION END-->
   <div class="footer">
-    &copy; 2016-2017 fengyun.cc
+    &copy; 2016-2017 fengyun.cc 风云兄弟
   </div>
 
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
