--- a/home/public/index.html
+++ b/home/public/index.html
@@ -42,8 +42,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <!--<a class="navbar-brand" href="#"><img src="assets/img/logo180-50.png" alt="" style="max-height:40px" /></a>-->
-        <a class="navbar-brand" style="margin-top: 8px;display: block" href="#">风云网络</a>
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="" style="max-height:40px;position: relative;top: -4px" /></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -322,8 +321,8 @@
     </div>
   </section>
   <!--CONTACT SECTION END-->
-  <div class="footer">
-    &copy; 2016-2017 fengyun.cc 风云兄弟
+  <div class="footer" style="font-size: 12px">
+    &copy; 2016-2017 fengyun.cc 风云兄弟 版权所有 ICP证：蜀ICP备17001579号-1
   </div>
 
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
