--- a/home/public/index.html
+++ b/home/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -42,7 +42,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="" style="max-height:40px;position: relative;top: -4px" /></a>
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="" style="max-height:40px;" /></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -60,7 +60,6 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 ">
           <div id="carousel-slider" data-ride="carousel" class="carousel slide">
-
             <div class="carousel-inner">
               <div class="item active">
                 <img src="/assets/img/banner-text-1.png" alt="">
@@ -78,16 +77,11 @@
               <li data-target="#carousel-slider" data-slide-to="1" class=""></li>
               <li data-target="#carousel-slider" data-slide-to="2" class=""></li>
             </ol>
-
           </div>
-
-
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2  scrollclass">
-
-
           <p>
             我之所以写作，不是我有才华，而是我有感情
             等待是这个世界上最极致的煎熬，我不舍得你等我
@@ -99,7 +93,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <!--HOME SECTION END-->
   <hr />
@@ -119,7 +112,6 @@
           <div class="media">
             <div class="pull-left">
               <i class=" fa fa-fax fa-4x"></i>
-
             </div>
             <div class="media-body">
               <h3 class="media-heading">百分百的服务态度</h3>
@@ -287,7 +279,6 @@
   <!--SERVICES SECTION END-->
   <hr />
   <section id="contact">
-
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2  text-center">
@@ -302,7 +293,6 @@
             <label>称呼</label>
             <div class="form-group">
               <input type="text" class="form-control" required="required" />
-
             </div>
             <label>电子邮件</label>
             <div class="form-group">
@@ -324,7 +314,6 @@
   <div class="footer" style="font-size: 12px">
     &copy; 2016-2017 fengyun.cc 风云兄弟 版权所有 ICP证：蜀ICP备17001579号-1
   </div>
-
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
   <!-- CORE JQUERY  -->
   <script src="assets/plugins/jquery-1.10.2.js"></script>
@@ -337,5 +326,4 @@
   <!-- CUSTOM SCRIPTS  -->
   <script src="assets/js/custom.js"></script>
 </body>
-
 </html>
